BLUTH, CHANGES

#### 0.7.1 (2011-03-06) ###############################

* CHANGE: Bluth::Gob objects have a ttl of 2 hours (up from 1)
* CHANGE: Bluth::Worker.interval is now 1 sec (down from 2)
* ADDED: Bluth::Worker processes now handle USR1 and USR2 signals
  for enabling/disabling debugging and increasing/decreasing
  Bluth.queuetimeout (respectively)


#### 0.7.0 (2011-03-04) ###############################

* ADDED: backtrace field to Bluth::Gob
* ADDED: Bluth::TimingBelt
* ADDED: Bluth::Queue.queues/entry_queues include TimingBelt queues 
  when Bluth::TimingBelt is defined.
* ADDED: replace-worker command


#### 0.6.8 (2011-02-07) ###############################

* FIXED: Remove use of calls to fineround in Worker
* CHANGE: Only call Familia.ld when in debug mode.


#### 0.6.7 (2011-01-08) ###############################

* FIXED: -f option now works for stop-workers and stop-scheduler commands
* ADDED: Bluth.onconnect (resolves non-default redis connection issues)


#### 0.6.6 (2011-01-02) ###############################

CHANGE: Bluth::Worker.onstart

#### 0.6.5 (2011-01-02) ###############################

* FIXED: The previous change required a different approach for the scheduler. 

#### 0.6.4 (2011-01-02) ###############################

* CHANGE: Don't save the worker until after onstart is called (b/c config info can be passed)

#### 0.6.3 (2011-01-02) ###############################

* CHANGE: Added :bluth prefix to Worker and Scheduler keys. 
* CHANGE: Depends on Familia 0.6.5
* CHANGE: Option -r for bin/bluth is now -R
* CHANGE: Bluth.poptimeout -> Bluth.queuetimeout


#### 0.6.1 (2010-12-31) ###############################

* ADDED: Bluth.env

#### 0.6.0 (2010-12-30) ###############################

* CHANGE: Now depends on Familia 0.6
* CHANGE: Worker process name now starts with 'bluth'
* CHANGE: Bluth.pop is now correctly named Bluth.shift (b/c it's returning
          the first value in the lists)
* ADDED: Bluth::Handler

